# tda-framework

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/tda_framework/: __init__.py
src/tda_framework/analysis/: __init__.py  timing.py  visualization.py
src/tda_framework/components/: __init__.py  analog.py  base.py
src/tda_framework/core/: __init__.py  circuit.py  events.py  signals.py  simulation.py
src/tda_framework/examples/: __init__.py  filter_design.py  pid_controller.py  simple_demo.py
src/tda_framework/hardware/: __init__.py  models.py
tests/: __init__.py  test_components.py  test_core.py
