[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tda-framework"
version = "0.1.0"
description = "Time Domain Analog Computation Simulation Framework"
authors = [{name = "TDA Framework"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "heapq-max>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
    "pyright>=1.1.405",
    "black>=25.9.0",
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check ."
format = "black ."
typecheck = "pyright"
clean = "rm -rf dist/ build/ *.egg-info/"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["COM812", "ISC001"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=tda_framework --cov-report=term-missing"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "strict"